# TaskBarEx

./: .gitignore  CLAUDE.md  CMakeLists.txt  Problem_Solution_JP.csv  Problem_Solution_Roadmap.csv  README.md  TaskBar_State_Matrix.csv  TaskBar_State_Matrix_JP.csv  Technical_Implementation_JP.csv  Technical_Implementation_Matrix.csv  run_taskbarex.bat  タスクバー状態遷移表.csv  問題解決ロードマップ.csv  技術実装詳細表.csv
.claude/: settings.local.json
docs/: Application_Grouping.md  Basic_Design.md  Windows_API_Integration.md
include/: ApplicationInfo.h  Common.h  IconExtractor.h  Logger.h  MainWindow.h  PinnedAppsManager.h  TaskbarGroupManager.h  TaskbarGroupWidget.h  TaskbarManager.h  TaskbarModel.h  TaskbarVisibilityMonitor.h  TaskbarWindow.h  ThumbnailPreviewWidget.h  WindowDetector.h  WindowInfo.h  WindowInfoCache.h  WindowThumbnailManager.h
resources/: icons.qrc  styles.qrc
src/: Logger.cpp  PinnedAppsManager.cpp  TaskbarGroupManager.cpp  TaskbarModel.cpp  TaskbarVisibilityMonitor.cpp  TaskbarWindow.cpp  ThumbnailPreviewWidget.cpp  WindowThumbnailManager.cpp  main.cpp
ui/: TaskbarWindow.ui
